# il2chad

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/Il2Chad/: Debug.h  Exports.h  Il2Chad.h  Metadata.h  Structs.h  Utils.h
include/il2chad/: il2chad.hpp  il2cpp-api.hpp  il2cpp-structs.hpp  metadata.hpp  struct-util.hpp  unity.hpp  vector2f.hpp  vector3f.hpp
src/Il2Chad/: Debug.cpp  Exports.cpp  Il2Chad.cpp  Imports.h  Metadata.cpp  Types.h  Utils.cpp
src/il2chad/: il2chad.cpp  il2cpp-structs.cpp  metadata.cpp  unity.cpp
src/test_lib/: main.cpp
